--- a/style.css
+++ b/style.css
@@ -2,13 +2,18 @@
     margin: 0;
     height: 0;
 } */
+html{
+    scroll-behavior: smooth;
+}
 ul,
 ol {
-  list-style-type: none;
+    list-style-type: none;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .container {
     margin: 0 auto;
     max-width: 1320px;
@@ -87,8 +92,75 @@ a {
 /* about part */
 .about {
     padding: 100px 0;
+    font-family: "Ovo", serif;
+
 }
 
+.aboutT1 {
+    text-align: center;
+    font-family: "Ovo", serif;
+}
+
+.aboutP1 {
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.aboutP2 {
+    font-size: 60px;
+    font-weight: 400;
+}
+.photo2 {
+    width: 463px;
+    height: 513px;
+    border-radius: 30px;
+    /* max-width: 100%; */
+}
+.flexForAbout{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+}
+.widthOfPinAbout{
+    width: 797px;
+     font-family: "Ovo", serif;
+     font-size: 20px;
+     font-weight: 400;
+    line-height: 40px;
+}
+.flexForSkills{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+
+}
+.borderForSkills{
+    padding: 20px 30px;
+    border: 2px solid #c7b8b8;
+    border-radius: 9px;
+    width: 250px;
+    cursor: pointer;
+}
+.borderForSkills:hover{
+    box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+}
+.skillsP1{
+    font-family: "Outfit", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: #494949;
+}
+.skillsP2{
+    font-family: "Outfit", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: #797979;
+    line-height: 26px;
+}
+.sizeOfIcon{
+    font-size: 30px;
+}
 /* about part */
 
 /* Desktops */
