--- a/style.css
+++ b/style.css
@@ -161,6 +161,23 @@ a {
 .sizeOfIcon{
     font-size: 30px;
 }
+.toolsFlex{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 10px;
+}
+.iconsTool{
+    padding: 20px;
+    width: 33px;
+    height: 33px;
+    border: 1px solid black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.iconsTool:hover{
+    box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+}
 /* about part */
 
 /* Desktops */
