--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
     margin: 0;
     height: 0;
 } */
-html{
+html {
     scroll-behavior: smooth;
 }
+
 ul,
 ol {
     list-style-type: none;
@@ -110,64 +111,75 @@ a {
     font-size: 60px;
     font-weight: 400;
 }
+
 .photo2 {
     width: 463px;
     height: 513px;
     border-radius: 30px;
     /* max-width: 100%; */
 }
-.flexForAbout{
+
+.flexForAbout {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 40px;
 }
-.widthOfPinAbout{
+
+.widthOfPinAbout {
     width: 797px;
-     font-family: "Ovo", serif;
-     font-size: 20px;
-     font-weight: 400;
+    font-family: "Ovo", serif;
+    font-size: 20px;
+    font-weight: 400;
     line-height: 40px;
 }
-.flexForSkills{
+
+.flexForSkills {
     display: flex;
     flex-direction: row;
     gap: 30px;
 
 }
-.borderForSkills{
+
+.borderForSkills {
     padding: 20px 30px;
     border: 2px solid #c7b8b8;
     border-radius: 9px;
     width: 250px;
     cursor: pointer;
 }
-.borderForSkills:hover{
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+
+.borderForSkills:hover {
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
 }
-.skillsP1{
+
+.skillsP1 {
     font-family: "Outfit", sans-serif;
     font-size: 20px;
     font-weight: 500;
     color: #494949;
 }
-.skillsP2{
+
+.skillsP2 {
     font-family: "Outfit", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #797979;
     line-height: 26px;
 }
-.sizeOfIcon{
+
+.sizeOfIcon {
     font-size: 30px;
 }
-.toolsFlex{
+
+.toolsFlex {
     display: flex;
     flex-direction: row;
     gap: 20px;
     margin-top: 10px;
 }
-.iconsTool{
+
+.iconsTool {
     padding: 20px;
     width: 33px;
     height: 33px;
@@ -175,9 +187,11 @@ a {
     border-radius: 10px;
     cursor: pointer;
 }
-.iconsTool:hover{
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+
+.iconsTool:hover {
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
 }
+
 /* about part */
 
 /* Desktops */
@@ -222,6 +236,111 @@ a {
         font-weight: 400;
         cursor: pointer;
     }
+
+    /* About section */
+    .about {
+        padding: 100px 0;
+        font-family: "Ovo", serif;
+    }
+
+    .aboutT1 {
+        text-align: center;
+        font-family: "Ovo", serif;
+    }
+
+    .aboutP1 {
+        font-size: 24px;
+        font-weight: 400;
+    }
+
+    .aboutP2 {
+        font-size: 60px;
+        font-weight: 400;
+    }
+
+    .photo2 {
+        width: 463px;
+        height: 513px;
+        border-radius: 30px;
+        /* max-width: 100%; */
+    }
+
+    .flexForAbout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .widthOfPinAbout {
+        width: 497px;
+        font-family: "Ovo", serif;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    .flexForSkills {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+
+    }
+
+    .borderForSkills {
+        padding: 20px 30px;
+        border: 2px solid #c7b8b8;
+        border-radius: 9px;
+        width: 450px;
+        cursor: pointer;
+    }
+
+    .borderForSkills:hover {
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .skillsP1 {
+        font-family: "Outfit", sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+        color: #494949;
+    }
+
+    .skillsP2 {
+        font-family: "Outfit", sans-serif;
+        font-size: 15px;
+        font-weight: 400;
+        color: #797979;
+        line-height: 26px;
+    }
+
+    .sizeOfIcon {
+        font-size: 30px;
+    }
+
+    .toolsFlex {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-top: 10px;
+        justify-content: center;
+    }
+
+    .iconsTool {
+        padding: 20px;
+        width: 33px;
+        height: 33px;
+        border: 1px solid black;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+    .iconsTool:hover {
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    /* About section */
 }
 
 /* For Mobile */
@@ -278,5 +397,112 @@ a {
     }
 
     /* Hero  */
+
+    .about {
+        padding: 100px 0;
+        font-family: "Ovo", serif;
+    }
+
+    .aboutT1 {
+        text-align: center;
+        font-family: "Ovo", serif;
+    }
+
+    .aboutP1 {
+        font-size: 24px;
+        font-weight: 400;
+    }
+
+    .aboutP2 {
+        font-size: 60px;
+        font-weight: 400;
+    }
+
+    .photo2 {
+        width: 463px;
+        height: 513px;
+        border-radius: 30px;
+        /* max-width: 100%; */
+    }
+
+    .flexForAbout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .widthOfPinAbout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 397px;
+        font-family: "Ovo", serif;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 40px;
+        /* text-align: center; */
+    }
+
+    .flexForSkills {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+    }
+
+    .borderForSkills {
+        padding: 20px 30px;
+        border: 2px solid #c7b8b8;
+        border-radius: 9px;
+        width: 250px;
+        cursor: pointer;
+    }
+
+    .borderForSkills:hover {
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .skillsP1 {
+        font-family: "Outfit", sans-serif;
+        font-size: 20px;
+        font-weight: 500;
+        color: #494949;
+    }
+
+    .skillsP2 {
+        font-family: "Outfit", sans-serif;
+        font-size: 15px;
+        font-weight: 400;
+        color: #797979;
+        line-height: 26px;
+    }
+
+    .sizeOfIcon {
+        font-size: 30px;
+    }
+
+    .toolsFlex {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        margin-top: 10px;
+        justify-content: center;
+    }
+
+    .iconsTool {
+        padding: 20px;
+        width: 33px;
+        height: 33px;
+        border: 1px solid black;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+    .iconsTool:hover {
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    /* About section */
 
 }
