--- a/style.css
+++ b/style.css
@@ -19,7 +19,12 @@ a {
     margin: 0 auto;
     max-width: 1320px;
 }
-
+.bg1{
+    background: url(images/bg1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 .navFlex {
     display: flex;
     align-items: center;
@@ -50,7 +55,7 @@ a {
 
 /* Hero */
 .hero {
-    padding: 100px 0;
+    padding: 200px 0;
     text-align: center;
     font-family: "Ovo", serif;
 }
