--- a/style.css
+++ b/style.css
@@ -19,12 +19,14 @@ a {
     margin: 0 auto;
     max-width: 1320px;
 }
-.bg1{
+
+.bg1 {
     background: url(images/bg1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
 .navFlex {
     display: flex;
     align-items: center;
@@ -198,6 +200,67 @@ a {
 }
 
 /* about part */
+
+/* Skills part */
+.skills {
+    padding: 100px 0;
+}
+
+.textSkills {
+    text-align: center;
+    font-family: "Ovo", serif;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.skillsP3 {
+    text-align: center;
+    font-family: "Ovo", serif;
+    font-size: 40px;
+
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.photoSize {
+    width: 100px;
+
+}
+
+.textOFSkills {
+    margin-top: 20px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.headOfSkills {
+    font-family: "Ovo", serif;
+    font-size: 40px;
+    font-weight: 700;
+}
+.textOFSkills:hover{
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);   
+    transition: 0.4s;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+.paraOfSkills {
+    font-family: "Ovo", serif;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 46px;
+}
+.right{
+    text-align: right;
+}
+.title{
+    margin-top: 70px;
+}
+/* Skills part */
 
 /* Desktops */
 @media (max-width: 1280px) {}
