--- a/style.css
+++ b/style.css
@@ -242,24 +242,29 @@ a {
     font-size: 40px;
     font-weight: 700;
 }
-.textOFSkills:hover{
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);   
+
+.textOFSkills:hover {
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
     transition: 0.4s;
     border: 1px solid black;
     border-radius: 20px;
 }
+
 .paraOfSkills {
     font-family: "Ovo", serif;
     font-size: 25px;
     font-weight: 400;
     line-height: 46px;
 }
-.right{
+
+.right {
     text-align: right;
 }
-.title{
+
+.title {
     margin-top: 70px;
 }
+
 /* Skills part */
 
 /* Desktops */
@@ -406,6 +411,11 @@ a {
 
     .iconsTool:hover {
         box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .flex {
+        display: flex;
+        flex-direction: row;
     }
 
     /* About section */
@@ -569,6 +579,28 @@ a {
 
     .iconsTool:hover {
         box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .headOfSkills {
+        font-family: "Ovo", serif;
+        font-size: 40px;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    .paraOfSkills {
+        font-family: "Ovo", serif;
+        font-size: 25px;
+        font-weight: 400;
+        line-height: 46px;
+         text-align: center;
     }
 
     /* About section */
